gtk/gtkadjustmentprivate.h
@@ -32,6 +32,8 @@ void gtk_adjustment_animate_to_value (GtkAdjustment *adjustment,
                                       gdouble        value);
 gdouble gtk_adjustment_get_target_value (GtkAdjustment *adjustment);
 
+gboolean gtk_adjustment_is_animating (GtkAdjustment *adjustment);
+
 G_END_DECLS
 
 
